--- a/index.css
+++ b/index.css
@@ -1,8 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Noto+Serif:ital,wght@0,100..900;1,100..900&display=swap');
 
-* {
+*{
     margin: 0;
     text-decoration: none;
+    font-family: var(--font-1);
 }
 :root {
     --primary-color: #E95A08;
@@ -24,9 +25,11 @@ header {
 a:nth-child(1) {
     color: var(--text-color);
     font-weight: 600;
+    color:black;
 }
 a {
     color: #8987A1;
+    font-size: 18px;
 }
 .nav {
     display: flex;
@@ -40,14 +43,22 @@ a {
     align-items: center;
     gap: 10px;
 }
-h1,h2{
+h1{
     font-family: var(--font-2);
-    font-weight: 700;
-    font-size: 4rem;
+    font-weight: 600;
+    font-size: 4rem; 
+    margin: 10px 0;
+}
+h2{
+    font-family: var(--font-2);
+    font-weight: 600;
+    font-size: 3rem; 
+    margin: 10px 0;
 }
 span {
     color: var(--primary-color);
-     font-weight: 700;
+     font-weight: 600;
+     font-family: var(--font-2);
 }
 p{
     font-family: var(--font-1);
@@ -61,18 +72,20 @@ p{
     justify-content: space-between;
     align-items: center;
     padding: 50px 0;
-    margin: 120px auto;
+    margin: 100px auto;
     max-width: 1140px;
     max-height: 460px;
 }
 .plants{
     display: flex;
     flex-direction: column;
+    justify-items: center;
     align-items: center;
     text-align: center;
     gap:50px;
     h2 {
         font-size: 50px;
+        margin: 0px;
     }
 }
 .plant-grid{
@@ -88,6 +101,7 @@ p{
         font-weight: 500;
         font-size: 1.2rem;
         color:black;
+        margin: 10px;
     }
     button{
         background-color: var(--primary-color);
@@ -104,32 +118,89 @@ p{
     }
     margin-bottom: 100px;
     }
+.flower-lover{
+    width: 1140px;
+    height: 600px;
+    margin: 50px auto;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-direction: row;
+    gap: 80px;
+    .lover{
+        position: relative;
+    }
+    .trusted-badge{
+      position: absolute;
+      /* top: 2072px;
+      left: 497px; */
+        top: -127px;
+        left: 327px;
+    }
+    .plant-lover{
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+        h2{
+            font-size: 3rem;
+            margin: 0px;
+        }
+        li{
+            font-size: 1.2rem;
+            font-family: var(--font-1);
+            color: var(--text-color);
+            font-weight: 400;
+            margin-bottom: 20px;
+            
+        }
+    }
+}
 @media screen and (max-width: 567px) {
-    body{
-        margin: auto;
+    h1,h2{
+        font-size: 2rem;
+    }
+    p{
+        font-size: 0.9rem;
+    }
+    .plants{
+        gap:25px;
+        h2 {
+            font-size: 1.7rem;
+        }
+        p{
+            font-size: 0.8rem;
+            text-align: center;
+        }
     }
     a{
         display: none;
     }
     .hero {
         flex-direction: column-reverse;
-        text-align: center;
+        text-align: left;
+        gap: 20px;
+        margin: 50px auto;
+        
     }
     .text {
-        
+        p{
+            text-align: center;
+        br{
+            display: none;
+        }
+        }
     }
     .plant-grid{
         grid-template-columns: 1fr 1fr;
-        grid-template-rows: auto;
+        gap: 30px;
+    .plant-card {
+        width: 171px;
+        height: 340px;
+        img{
+            width: 170px;
+            height: 195px;
+        }
+        
     }
-    .text {
-        margin-bottom: 20px;
     }
-    h1 {
-        font-size: 2.5rem;
-    }
-    p {
-        font-size: 1rem;
-    }
-    
 }
