--- a/index.css
+++ b/index.css
@@ -283,15 +283,51 @@ p{
         
     }
     }
-    
+    .flower-lover {
+        width: 100%;
+        height: auto;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+
+        gap: 20px;
+        .lover {
+            width: 100%;
+            height: 300px;
+            img{
+                width: 100%;
+                height: 100%;
+            }
+        }
+        .trusted-badge{
+            display: none;
+        }
+        .plant-lover {
+            text-align: center;
+            li{
+                font-size: 1rem;
+            }
+        }
+    }
+    .deals{
+        br{
+        display: none;
+    }
+    }
     .deals-section{
+        
     display: grid;
     grid-template-areas: "deals-1"
                          "deals-3 "
                          "deals-2";
     gap: 20px;
-    .deals-1, .deals-2, .deals-3, .shop, .shop1{
-        width: 100%;
+    
+    .shop , .shop1{
+        width:100%
+    }
+    .deals-1, .deals-2, .deals-3{
+        width: 90%;
+        margin: 0px auto;
         height: 200px;
         h3{
             font-size: 1.2rem;
