--- a/index.css
+++ b/index.css
@@ -1,9 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Noto+Serif:ital,wght@0,100..900;1,100..900&display=swap');
 
 *{
-    margin: 0;
+    
     text-decoration: none;
     font-family: var(--font-1);
+    box-sizing: border-box;
+    margin: 0;
 }
 :root {
     --primary-color: #E95A08;
@@ -19,7 +21,7 @@ header {
     align-items: center;
     padding: 22px;
     height: 71px;
-    margin: auto;
+    margin: 30px auto;
     max-width: 1140px;
 }
 a:nth-child(1) {
@@ -34,7 +36,7 @@ a {
 .nav {
     display: flex;
     align-items: center;
-    gap: 30px;
+    gap: 50px;
     padding: 22px 0;
     color: black;
 }
@@ -129,6 +131,9 @@ p{
     gap: 80px;
     .lover{
         position: relative;
+       .lover-image{
+        height: 540px; width: 510px;
+       }
     }
     .trusted-badge{
       position: absolute;
@@ -168,7 +173,6 @@ p{
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
-    
     width: 367px;
     height: 197px;
   
@@ -218,7 +222,7 @@ p{
     p{
         text-decoration: underline;
         color:white;
-        font-weight: 600;
+        font-weight: 400;
     }
     h3{
         font-family: var(--font-1);
@@ -235,106 +239,268 @@ p{
     max-width: 1140px;
     margin: 50px auto;
 }
-@media screen and (max-width: 567px) {
-    h1,h2{
+.cta{
+    background-image: url("./B12A02-Responsive-Flowers/assets/news-letter-bg.png");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    width: 100%;
+    height: 400px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    color: white;
+    margin: 60px 0px;
+    h2{
+        font-family: var(--font-2);
+        margin: 30px 0;
+    }
+    form{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        input{
+        padding: 8px 20px;
+        border: none;
+        width: 644px;
+        height: 50px;
+
+    }
+        button{
+            background-color: var(--primary-color);
+            /* padding: 26px 50px; */
+            color: white;
+            border: none;
+            width: 186px;
+            height: 50px;
+            font-size: 1rem;
+            font-weight: 500;
+            cursor: pointer;
+
+        }
+    }
+    
+}
+.footer{
+    margin: 50px;
+    display: flex;
+    padding: 20px 100px;
+    justify-content: space-between;
+    .logo{
+        width: 359px;
+        height: 179px;
+        img{
+            width: 100%;
+            height: 100%;
+        }
+    }
+    ul{
+        list-style: none;
+        padding: 0;
+    }
+   
+    .footer-links, .footer-feature{
+        display: flex;
+        flex-direction: column;
+        gap: 32px;
+         li{
+            margin-bottom: 20px;
+            font-size: 1.2rem;
+            font-family: var(--font-1);
+            font-weight: 400;
+            color: var(--text-color);
+            a{
+                color: gray;
+                font-size: 1rem;
+                font-weight: 400;
+            }
+        }
+        a{
+            color: var(--text-color);
+            font-size: 1rem;
+            font-weight: 400;
+        }
+    }
+    .social-media{
+        padding: absolute;
+        top: 0px;
+        right: 0px;
+        display: flex;
+        gap: 24px;
+        justify-self: start;
+        img{
+            width: 30px;
+            height: 30px;
+        }
+    }
+}
+@media screen and (max-width: 576px) {
+    body{
+    margin: 20px;
+}
+    h1, h2 {
         font-size: 2rem;
+        text-align: center;
     }
-    p{
+    p {
         font-size: 0.9rem;
+        text-align: center;
     }
-    .plants{
-        gap:25px;
+    .plants {
+        gap: 25px;
+        align-items: center;
+        justify-content: center;
+        text-align: center;
         h2 {
             font-size: 1.7rem;
+            text-align: center;
         }
-        p{
+        p {
             font-size: 0.8rem;
             text-align: center;
         }
     }
-    a{
+    a {
         display: none;
     }
     .hero {
         flex-direction: column-reverse;
-        text-align: left;
+        text-align: center;
         gap: 20px;
-        margin: 50px auto;
-        
+        align-items: center;
+        justify-content: center;
     }
     .text {
-        p{
-            text-align: center;
-        br{
-            display: none;
+        h1{
+            text-align: left;
         }
+        p {
+            text-align: left;
+            br {
+                display: none;
+            }
         }
     }
-    .plant-grid{
+    .plant-grid {
         grid-template-columns: 1fr 1fr;
         gap: 30px;
-    .plant-card {
-        width: 171px;
-        height: 340px;
-        img{
-            width: 170px;
-            height: 195px;
+        justify-items: center;
+        .plant-card {
+            width: 171px;
+            height: 340px;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            text-align: center;
+            img {
+                width: 170px;
+                height: 195px;
+            }
         }
-        
-    }
     }
     .flower-lover {
-        width: 100%;
-        height: auto;
+        display: flex;
         flex-direction: column;
         align-items: center;
         justify-content: center;
+        width: 100%;
+        height: auto;
+        margin: 100px 0px;
+        .lover > img {
+            height: 396px;
+            width: 358px;
+           
 
-        gap: 20px;
-        .lover {
-            width: 100%;
-            height: 300px;
-            img{
-                width: 100%;
-                height: 100%;
-            }
         }
-        .trusted-badge{
+        .lover {
+         
+           
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+         
+        .trusted-badge {
             display: none;
         }
         .plant-lover {
-            text-align: center;
-            li{
+            width: 100%;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+          h2{
+            font-size: 1.8rem;
+            text-align: left;
+            br{
+                display: none;
+            }
+          }
+            li {
                 font-size: 1rem;
+                
+
             }
         }
     }
-    .deals{
-        br{
-        display: none;
+    .deals {
+        align-items: center;
+        justify-content: center;
+        text-align: center;
+        br {
+            display: none;
+        }
     }
+    .deals-section {
+        display: grid;
+        grid-template-areas: "deals-1"
+                             "deals-3"
+                             "deals-2";
+        gap: 20px;
+        justify-items: center;
+        .shop, .shop1 {
+            width: 100%;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            text-align: center;
+        }
+        .deals-1, .deals-2, .deals-3 {
+            width: 100%;
+            margin: 0px auto;
+            height: 200px;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            text-align: center;
+            h3 {
+                font-size: 1.2rem;
+                text-align: center;
+            }
+            p {
+                font-size: 1rem;
+                text-align: center;
+            }
+        }
     }
-    .deals-section{
-        
-    display: grid;
-    grid-template-areas: "deals-1"
-                         "deals-3 "
-                         "deals-2";
-    gap: 20px;
+    .cta{
+        flex-wrap: nowrap;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        margin: 100px 0;
+        padding: 50px;
+        width: 100%;
+        height: 300px;
+        form{
+            width: 300px;
+            height: 50px;
+        }
+    }
     
-    .shop , .shop1{
-        width:100%
-    }
-    .deals-1, .deals-2, .deals-3{
-        width: 90%;
-        margin: 0px auto;
-        height: 200px;
-        h3{
-            font-size: 1.2rem;
-        }
-        p{
-            font-size: 0.8rem;
-        }
-    }
-    }
 }
