--- a/index.css
+++ b/index.css
@@ -502,5 +502,36 @@ p{
             height: 50px;
         }
     }
-    
+    .footer {
+        flex-direction: column;
+      
+        justify-content: left;
+        padding: 10px;
+        margin: 10px 0px;
+        .logo {
+            p{
+                text-align: left;
+            }
+            img {
+                width: 100%;
+                height: 100%;
+                margin-bottom: 10px;
+            }
+        }
+        .footer-links, .footer-feature {
+            align-items: center;
+            justify-content: center;
+            text-align: center;
+            li {
+            font-size: 0.9rem;
+            display: none;
+            }
+        }
+        .social-media {
+            position: relative;
+            top: -20px;
+            display: flex;
+            gap: 16px;
+        }
+    }
 }
