--- a/index.css
+++ b/index.css
@@ -505,6 +505,7 @@ p{
         justify-content: center;
         margin: 100px 0;
         padding: 50px;
+        overflow: hidden;
         width: 100%;
         height: 300px;
         form{
